# school_hub

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_guardian_pix_holder_name.py
apps/classes/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/core/: __init__.py  containers.py  models.py  urls.py  views.py
apps/dashboard/: __init__.py  urls.py  views.py
apps/events/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
apps/suppliers/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
config/: __init__.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
requirements/: base.txt  dev.txt  prod.txt
templates/: base.html
templates/accounts/: login.html  password_change.html  password_change_done.html  profile.html  profile_update.html  register.html
templates/classes/: class_detail.html  class_form.html  class_list.html  invitation_form.html  join_class.html  student_confirm_delete.html  student_form.html
templates/dashboard/: index.html
templates/events/: event_detail.html  event_form.html  event_item_form.html  event_list.html  event_pix.html  participation_decline.html  participation_form.html  payment_form.html
templates/partials/: pagination.html
templates/site/: about.html  home.html
templates/suppliers/: supplier_detail.html  supplier_form.html  supplier_list.html
(+10 files in other folders)
